[workspace]
resolver = "2"
members = ["common"]

[workspace.package]
edition = "2021"
license = "MIT"

# Lint policy shared by every crate (each member opts in with
# `[lints] workspace = true`). Configured here so the whole workspace lints
# identically; CI runs `cargo clippy -- -D warnings` to make these hard errors.
[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
ignore = "0.4"
mime_guess = "2"
chrono = "0.4"
filetime = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
base64 = "0.22"
percent-encoding = "2"
regex = "1"
tracing = "0.1"
