[package]
name = "silverbullet-server"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
silverbullet-common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
silverbullet-common = { path = "../common", features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
